rails Turbolinks HATEOAS

--- a/app/views/polygons_posts/index.html.erb
+++ b/app/views/polygons_posts/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Polygons Posts</h1>
-
+<a href="/edit" data-turbolinks-action="replace">Polygons</a>
 <table>
   <thead>
     <tr>
